--- a/assign1/index.html
+++ b/assign1/index.html
@@ -22,7 +22,7 @@
     <header id="website-header">
         <div id="header-left">
             <a href="index.html"><img id="header-js-icon" src="../images/header-icon.png" alt="javascript icon"></a>
-            <h1 class="header-title">Introduction to Javascript</h1>
+            <p class="header-title">Introduction to Javascript</p>
         </div>
 
         <nav id="header-right">
@@ -43,7 +43,7 @@
 
     <!-- PAGE CONTENT -->
     <article>
-        <h2 class="page-title">About this website</h2>
+        <h1 class="page-title">About this website</h1>
         <p>Welcome to our website. Here, we will introduce you to the wonderful world of <strong>Javascript</strong>. </p>
         <p> This is by no means a definitive resource but rather a high level summary about this powerful tool used in over
         <em>1.52 billion websites</em> today. If
