--- a/assign1/topic.html
+++ b/assign1/topic.html
@@ -27,7 +27,7 @@
     <header id="website-header">
         <div id="header-left">
             <a href="index.html"><img id="header-js-icon" src="../images/header-icon.png" alt="javascript icon"></a>
-            <h1 class="header-title">Introduction to Javascript</h1>
+            <p class="header-title">Introduction to Javascript</p>
         </div>
 
         <nav id="header-right">
@@ -47,11 +47,11 @@
     </header>
 
     <!-- PAGE CONTENT -->
-    <h2>Javascript: an Overview</h2>
+    <h1>Javascript: an Overview</h1>
 
     <!-- section topics -->
     <section id="origins">
-        <h3>History</h3>
+        <h2>History</h2>
 
         <div class="container-fluid">
             <div id="history-summary" class="col-sm-auto col-11">
@@ -133,7 +133,7 @@
     </section>
 
     <section id="function">
-        <h3>What does Javascript do?</h3>
+        <h2>What does Javascript do?</h2>
 
         <div id="figure2">
             <figure class="fig2">
@@ -176,8 +176,8 @@
     </section>
 
 
-    <div class="container-fluid">
-        <aside class="col-md-4 col-12" id="Java">
+    <div class="container-fluid"  id="java">
+        <aside class="col-md-4 col-12">
             JavaScript is often confused with Java however they are different! Java is a high level object oriented
             programming language used for multiple complex and sophisticated applications such as Android apps,
             financial
@@ -190,7 +190,7 @@
 
 
     <section id="current">
-        <h3>Current state of Javascript</h3>
+        <h2>Current state of Javascript</h2>
         <p>
             The power and versatility of JavaScript in both front and backend development means it is the most popular
             programming language in the world (Trienpont International). Statistics obtained from various sources show:
@@ -216,7 +216,7 @@
     </section>
 
     <section id="future">
-        <h3>Future trends</h3>
+        <h2>Future trends</h2>
         <p>
             Since it's inception in 1995 where it revolutionised the web browsing experience, JS has solidified its
             status as a crucial component of the web browser and other applications.
@@ -235,7 +235,7 @@
     </section>
 
     <section id="related-tech">
-        <h3>Related technologies</h3>
+        <h2>Related technologies</h2>
         <p>
             In website building, the three core development languages are HTML, CSS and Javascript. It is almost
             impossible to find a website that does not utilise all three of these technologies - they are all inexorably
