--- a/assign1/enhancements.html
+++ b/assign1/enhancements.html
@@ -24,7 +24,7 @@
     <header id="website-header">
         <div id="header-left">
             <a href="index.html"><img id="header-js-icon" src="../images/header-icon.png" alt="javascript icon"></a>
-            <h1 class="header-title">Introduction to Javascript</h1>
+            <p class="header-title">Introduction to Javascript</p>
         </div>
 
         <nav id="header-right">
@@ -44,11 +44,11 @@
     </header>
 
     <!-- PAGE CONTENT -->
-    <h2>Enhancements</h2>
+    <h1>Enhancements</h1>
     <p>Below is a list of enhancements we have used to extend the website beyond the content learned in the syllabus.
     </p>
 
-    <h3>Bootstrap</h3>
+    <h2>Bootstrap</h2>
     <p>Bootstrap is a very popular open source CSS development framework for websites. Bootstrap has many libraries
         and we used the CSS one for responsive design. This went beyond the requirements of the assignment as this
         required a lot of research and trial and error to successfully implement on the page.
@@ -85,7 +85,7 @@
         </li>
     </ul>
 
-    <h3>Image map</h3>
+    <h2>Image map</h2>
 
     <p>An image map has been used to better assist the user in understanding of the topic. <a href="topic.html#figure2"
             target="_blank">Click here.</a></p>
@@ -133,7 +133,7 @@
     <p>It was discovered upon implementation that image maps do not work well with dynamic resizable images therefore
         the image used is of a fixed size.
     </p>
-    <h3>Favicon</h3>
+    <h2>Favicon</h2>
 
     <p>A favicon <img id="favicon" src="../images/icon/favicon.ico" alt="image of website favicon showing JS icon"> is a
         small icon found next to anything that identifies the website.
@@ -153,7 +153,7 @@
         <code>&lt;link rel="icon" type="image/x-icon" href="pathhere"&gt;</code>
     </p>
 
-    <h3>Tooltips</h3>
+    <h2>Tooltips</h2>
 
     <p>Tooltips have been added to the email signature images in the footer of the website upon hover as per below.</p>
     <p>These enhance the website as they give the user a prompt and a call to action. The tooltips only appear when
@@ -205,7 +205,7 @@
                 target="_blank">FreeCodeCamp forum post</a></li>
     </ul>
 
-    <h3>Flexbox</h3>
+    <h2>Flexbox</h2>
 
     <p>Due to the vision of what we wanted the header to look like, it was necessary to extend beyond the syllabus
         material, hence flexbox was used for the heading. Flexbox makes it much easier to align items and is also
