quiz image update

--- a/assign1/quiz.html
+++ b/assign1/quiz.html
@@ -89,7 +89,7 @@
         <!-- Question 2 -->
         <div class="que_2">
             <div class="image_2">
-                <img src="../images/IMG_2.JPG" alt="Quiz page image 2">
+                <img src="../images/IMG_2.jpg" alt="Quiz page image 2">
             </div>
             <p>Who is the inventor of JavaScript?</p>
 
