--- a/assign1/topic2.html
+++ b/assign1/topic2.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+    
     <head>
         <meta charset="utf-8" />
-        <meta name="description" content="JavaScript Image Map" />
-        <meta name="keywords" content="HTML5, JavaScript, image" />
-        <meta name="author" content="Eloise Ridder-Strickland"  />
+        <meta name="description" content="JavaScript Image Map"/>
+        <meta name="keywords" content="HTML5, JavaScript, image"/>
+        <meta name="author" content="Eloise Ridder-Strickland"/>
         <title>JavaScript Image Map</title>
     </head>
-<!--FOR JAVASCRIPT-->
+
+    <!--FOR JAVASCRIPT-->
 	<body>
 		<header><h1>JavaScript</h1></header>
 		<p><strong>JavaScript is Layer 3</strong> of the <em>layer cake of standard web technologies</em></p>
-	    <a>href="""  </a>
+		<a href="topic.html"> 
+		<button>Back</button> </a>
 	</body>
 
 </html>
