--- a/assign1/topic4.html
+++ b/assign1/topic4.html
@@ -11,6 +11,7 @@
     <body>
 		<header><h1>HTML</h1></header>
 		<p><strong>HTML is Layer 1</strong> of the <em>layer cake of standard web technologies</em></p>
-        <a>  </a>
+        <a href="topic.html"> 
+		<button>Back</button> </a>
     </body>
 </html>
