added youtube link to index

--- a/assign1/index.html
+++ b/assign1/index.html
@@ -7,21 +7,21 @@
     <meta name="description" content="index page for COS10032 assignment 1 on topic Javascript">
     <meta name="keywords" content="javascript, homepage, about, educational">
     <meta name="author" content="Eloise Ridder-Strickland, Oshadi Dewmini Pattiarachchi, Lucy Yu">
-    <link rel="icon" type="image/x-icon" href="../images/icon/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="images/icon/favicon.ico">
     <title>Introduction to Javascript</title>
     <!-- embedded code for external google font "Share Tech" -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Share+Tech&display=swap" rel="stylesheet">
     <!-- css  -->
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <!-- HEADER -->
     <header id="website-header">
         <div id="header-left">
-            <a href="index.html"><img id="header-js-icon" src="../images/header-icon.png" alt="javascript icon"></a>
+            <a href="index.html"><img id="header-js-icon" src="images/header-icon.png" alt="javascript icon"></a>
             <p class="header-title">Introduction to Javascript</p>
         </div>
 
@@ -50,6 +50,8 @@
         you would like to know more, please feel free to explore, browse and don't forget to take the quiz!</p>
 
         <a id="get-started" href="topic.html">GET STARTED!</a>
+
+        <p>To hear our explanation about designing this website, please <a href="https://www.youtube.com/watch?v=9EUzjRQNyTI" target="_blank">click here</a></p>
     </article>
 
     <!-- FOOTER -->
@@ -57,28 +59,28 @@
         Questions? Feedback? Contact us!
         <div class="email-individual">
             <a class="send-email" href="mailto:rwijesinghe@swin.edu.au">
-                <img class="individual-portrait" src="../images/Ravinda-Wijesinghe.png" alt="tutor portrait">
+                <img class="individual-portrait" src="images/Ravinda-Wijesinghe.png" alt="tutor portrait">
             </a>
             <span class="tooltiptext">Email Ravinda!</span>
         </div>
 
         <div class="email-individual">
             <a class="send-email" href="mailto:104142281@student.swin.edu.au">
-                <img class="individual-portrait" src="../images/portrait.webp" alt="lucy portrait">
+                <img class="individual-portrait" src="images/portrait.webp" alt="lucy portrait">
             </a>
             <span class="tooltiptext">Email Lucy!</span>
         </div>
 
         <div class="email-individual">
             <a class="send-email" href="mailto:104810423@student.swin.edu.au">
-                <img class="individual-portrait" src="../images/portrait.webp" alt="Eloise portrait">
+                <img class="individual-portrait" src="images/portrait.webp" alt="Eloise portrait">
             </a>
             <span class="tooltiptext">Email Eloise!</span>
         </div>
 
         <div class="email-individual">
             <a class="send-email" href="104934718@student.swin.edu.au">
-                <img class="individual-portrait" src="../images/portrait.webp" alt="Oshadi portrait">
+                <img class="individual-portrait" src="images/portrait.webp" alt="Oshadi portrait">
             </a>
             <span class="tooltiptext">Email Oshadi!</span>
         </div>
