--- a/assign1/topic2.html
+++ b/assign1/topic2.html
@@ -13,8 +13,7 @@
 	<body>
 		<header><h1>JavaScript</h1></header>
 		<p><strong>JavaScript is Layer 3</strong> of the <em>layer cake of standard web technologies</em></p>
-		<a href="topic.html"> 
-		<button>Back</button> </a>
+		<button onclick="goBack()">Back</button>
 	</body>
 
 </html>
