Working Button Update.

--- a/assign1/topic4.html
+++ b/assign1/topic4.html
@@ -11,7 +11,6 @@
     <body>
 		<header><h1>HTML</h1></header>
 		<p><strong>HTML is Layer 1</strong> of the <em>layer cake of standard web technologies</em></p>
-        <a href="topic.html"> 
-		<button>Back</button> </a>
+        <button onclick="goBack()">Back</button>
     </body>
 </html>
