--- a/assign1/topic3.html
+++ b/assign1/topic3.html
@@ -11,6 +11,6 @@
     <body>
 		<header><h1>CSS</h1></header>
 		<p><strong>CSS is Layer 2</strong> of the <em>layer cake of standard web technologies</em></p>
-        <button onclick="goBack()">Back</button>
+        <a href="topic.html">Back</a>
 	</body>
 </html>
