submitted version of assignment 1

--- a/assign1/topic2.html
+++ b/assign1/topic2.html
@@ -2,10 +2,10 @@
 <html lang="en">
     
     <head>
-        <meta charset="utf-8" />
-        <meta name="description" content="JavaScript Image Map"/>
-        <meta name="keywords" content="HTML5, JavaScript, image"/>
-        <meta name="author" content="Eloise Ridder-Strickland"/>
+        <meta charset="utf-8">
+        <meta name="description" content="JavaScript Image Map">
+        <meta name="keywords" content="HTML5, JavaScript, image">
+        <meta name="author" content="Eloise Ridder-Strickland">
         <title>JavaScript Image Map</title>
     </head>
 
