--- a/assign1/topic3.html
+++ b/assign1/topic3.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="utf-8" />
-        <meta name="description" content="CSS Image Map" />
-        <meta name="keywords" content="HTML5, image" />
-        <meta name="author" content="Eloise Ridder-Strickland"  />
+        <meta charset="utf-8">
+        <meta name="description" content="CSS Image Map">
+        <meta name="keywords" content="HTML5, image">
+        <meta name="author" content="Eloise Ridder-Strickland">
         <title>CSS Image Map</title>
     </head>
 <!--FOR CSS-->
