--- a/assign1/enhancements.html
+++ b/assign1/enhancements.html
@@ -7,7 +7,7 @@
     <meta name="description" content="enhancements page for COS10032 assignment 1 on topic Javascript">
     <meta name="keywords" content="javascript, enhancements">
     <meta name="author" content="Eloise Ridder-Strickland, Oshadi Dewmini Pattiarachchi, Lucy Yu">
-    <link rel="icon" type="image/x-icon" href="../images/icon/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="images/icon/favicon.ico">
     <title>Website enhancements</title>
     <!-- embedded code for external google font "Share Tech" -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,14 +16,14 @@
     <!-- css  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+        <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
     <!-- HEADER -->
     <header id="website-header">
         <div id="header-left">
-            <a href="index.html"><img id="header-js-icon" src="../images/header-icon.png" alt="javascript icon"></a>
+            <a href="index.html"><img id="header-js-icon" src="images/header-icon.png" alt="javascript icon"></a>
             <p class="header-title">Introduction to Javascript</p>
         </div>
 
@@ -135,7 +135,7 @@
     </p>
     <h2>Favicon</h2>
 
-    <p>A favicon <img id="favicon" src="../images/icon/favicon.ico" alt="image of website favicon showing JS icon"> is a
+    <p>A favicon <img id="favicon" src="images/icon/favicon.ico" alt="image of website favicon showing JS icon"> is a
         small icon found next to anything that identifies the website.
         It is ussually visible in the title bar of a web browser, bookmarks, search history or search bar.
         Although a favicon is only 16 x 16 pixels in size, we felt it was an important detail to include due to the
@@ -239,28 +239,28 @@
         Questions? Feedback? Contact us!
         <div class="email-individual">
             <a class="send-email" href="mailto:rwijesinghe@swin.edu.au">
-                <img class="individual-portrait" src="../images/Ravinda-Wijesinghe.png" alt="tutor portrait">
+                <img class="individual-portrait" src="images/Ravinda-Wijesinghe.png" alt="tutor portrait">
             </a>
             <span class="tooltiptext">Email Ravinda!</span>
         </div>
 
         <div class="email-individual">
             <a class="send-email" href="mailto:104142281@student.swin.edu.au">
-                <img class="individual-portrait" src="../images/portrait.webp" alt="lucy portrait">
+                <img class="individual-portrait" src="images/portrait.webp" alt="lucy portrait">
             </a>
             <span class="tooltiptext">Email Lucy!</span>
         </div>
 
         <div class="email-individual">
             <a class="send-email" href="mailto:104810423@student.swin.edu.au">
-                <img class="individual-portrait" src="../images/portrait.webp" alt="Eloise portrait">
+                <img class="individual-portrait" src="images/portrait.webp" alt="Eloise portrait">
             </a>
             <span class="tooltiptext">Email Eloise!</span>
         </div>
 
         <div class="email-individual">
             <a class="send-email" href="104934718@student.swin.edu.au">
-                <img class="individual-portrait" src="../images/portrait.webp" alt="Oshadi portrait">
+                <img class="individual-portrait" src="images/portrait.webp" alt="Oshadi portrait">
             </a>
             <span class="tooltiptext">Email Oshadi!</span>
         </div>
