--- a/assign1/quiz.html
+++ b/assign1/quiz.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Group Assignment">
     <meta name="keywords" content="HTML">
     <meta name="author" content="Oshadi Pattiarachchi">
-    <link rel="icon" type="image/x-icon" href="../images/icon/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="images/icon/favicon.ico">
     <title>Javascript Quiz</title>
     <!-- embedded code for external google font "Share Tech" -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,15 +15,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Share+Tech&display=swap" rel="stylesheet">
 
     <!-- css  -->
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/quiz_style.css">
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/quiz_style.css">
 </head>
 
 <body>
     <!-- HEADER -->
     <header id="website-header">
         <div id="header-left">
-            <a href="index.html"><img id="header-js-icon" src="../images/header-icon.png" alt="javascript icon"></a>
+            <a href="index.html"><img id="header-js-icon" src="images/header-icon.png" alt="javascript icon"></a>
             <p class="header-title">Introduction to Javascript</p>
         </div>
 
@@ -72,7 +72,7 @@
             </div>
             <div class="image">
 
-                <img src="../images/IMG_5561.JPG" alt="Quiz page image 1">
+                <img src="images/IMG_5561.JPG" alt="Quiz page image 1">
             </div>
         </div>
 
@@ -89,7 +89,7 @@
         <!-- Question 2 -->
         <div class="que_2">
             <div class="image_2">
-                <img src="../images/IMG_2.jpg" alt="Quiz page image 2">
+                <img src="images/IMG_2.jpg" alt="Quiz page image 2">
             </div>
             <p>Who is the inventor of JavaScript?</p>
 
@@ -134,7 +134,7 @@
         <!-- Question 4 -->
         <div class="que_4">
             <div class="image_3">
-                <img src="../images/IMG_3.jpg" alt="Quiz page image 3">
+                <img src="images/IMG_3.jpg" alt="Quiz page image 3">
             </div>
 
             <p>What are some notable frameworks built with JavaScript?</p>
@@ -188,28 +188,28 @@
         Questions? Feedback? Contact us!
         <div class="email-individual">
             <a class="send-email" href="mailto:rwijesinghe@swin.edu.au">
-                <img class="individual-portrait" src="../images/Ravinda-Wijesinghe.png" alt="tutor portrait">
+                <img class="individual-portrait" src="images/Ravinda-Wijesinghe.png" alt="tutor portrait">
             </a>
             <span class="tooltiptext">Email Ravinda!</span>
         </div>
 
         <div class="email-individual">
             <a class="send-email" href="mailto:104142281@student.swin.edu.au">
-                <img class="individual-portrait" src="../images/portrait.webp" alt="lucy portrait">
+                <img class="individual-portrait" src="images/portrait.webp" alt="lucy portrait">
             </a>
             <span class="tooltiptext">Email Lucy!</span>
         </div>
 
         <div class="email-individual">
             <a class="send-email" href="mailto:104810423@student.swin.edu.au">
-                <img class="individual-portrait" src="../images/portrait.webp" alt="Eloise portrait">
+                <img class="individual-portrait" src="images/portrait.webp" alt="Eloise portrait">
             </a>
             <span class="tooltiptext">Email Eloise!</span>
         </div>
 
         <div class="email-individual">
             <a class="send-email" href="104934718@student.swin.edu.au">
-                <img class="individual-portrait" src="../images/portrait.webp" alt="Oshadi portrait">
+                <img class="individual-portrait" src="images/portrait.webp" alt="Oshadi portrait">
             </a>
             <span class="tooltiptext">Email Oshadi!</span>
         </div>
