--- a/assign1/topic.html
+++ b/assign1/topic.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
+
 <html lang="en">
 
-    <head>
-        <meta charset="utf-8">
-        <meta name="description" content="topic page for COS10032 assignment 1 on topic Javascript">
-        <meta name="keywords" content="javascript, topic, educational">
-        <meta name="author" content="Eloise Ridder-Strickland, Oshadi Dewmini Pattiarachchi, Lucy Yu">
-        <link rel="stylesheet" href="../css/style.css">
-        <link rel="icon" type="image/x-icon" href="../images/icon/favicon.ico">
-        <title>What is Javascript?</title>
-        <!-- embedded code for external google font "Share Tech" -->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Share+Tech&display=swap" rel="stylesheet">
-        <!-- css  -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+<head>
+    <meta charset="utf-8">
+    <meta name="description" content="topic page for COS10032 assignment 1 on topic Javascript">
+    <meta name="keywords" content="javascript, topic, educational">
+    <meta name="author" content="Eloise Ridder-Strickland, Oshadi Dewmini Pattiarachchi, Lucy Yu">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="icon" type="image/x-icon" href="images/icon/favicon.ico">
+    <title>What is Javascript?</title>
+    <!-- embedded code for external google font "Share Tech" -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Share+Tech&display=swap" rel="stylesheet">
+    <!-- css  -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <link rel="stylesheet" href="../css/custom.css">
 
-        <link rel="stylesheet" href="../css/style.css">
-    </head>
+        <link rel="stylesheet" href="styles/style.css">
+</head>
 
 <body>
     <!-- HEADER -->
     <header id="website-header">
         <div id="header-left">
-            <a href="index.html"><img id="header-js-icon" src="../images/header-icon.png" alt="javascript icon"></a>
+            <a href="index.html"><img id="header-js-icon" src="images/header-icon.png" alt="javascript icon"></a>
             <p class="header-title">Introduction to Javascript</p>
         </div>
 
@@ -90,7 +90,7 @@
         <div class="row">
             <div class="col-md-4">
                 <figure class="mb-4" id="fig1">
-                    <img class="img-fluid d-sm-inline d-block" id="fig1-image" src="../images/Brendan_Eich.jpeg"
+                    <img class="img-fluid d-sm-inline d-block" id="fig1-image" src="images/Brendan_Eich.jpeg"
                         alt="brendan-eich-javascript-inventor">
                     <figcaption>Figure 1 - Brendan Eich, inventor of JavaScript.</figcaption>
                 </figure>
@@ -136,7 +136,7 @@
 
         <div id="figure2">
             <figure class="fig2">
-                <img id="fig2-image" src="../images/JS-CSS-HTML.png" alt="3 layer standard web technologies"
+                <img id="fig2-image" src="images/JS-CSS-HTML.png" alt="3 layer standard web technologies"
                     usemap="#weblevels">
 
                 <map name="weblevels">
@@ -315,28 +315,28 @@
         Questions? Feedback? Contact us!
         <div class="email-individual">
             <a class="send-email" href="mailto:rwijesinghe@swin.edu.au">
-                <img class="individual-portrait" src="../images/Ravinda-Wijesinghe.png" alt="tutor portrait">
+                <img class="individual-portrait" src="images/Ravinda-Wijesinghe.png" alt="tutor portrait">
             </a>
             <span class="tooltiptext">Email Ravinda!</span>
         </div>
 
         <div class="email-individual">
             <a class="send-email" href="mailto:104142281@student.swin.edu.au">
-                <img class="individual-portrait" src="../images/portrait.webp" alt="lucy portrait">
+                <img class="individual-portrait" src="images/portrait.webp" alt="lucy portrait">
             </a>
             <span class="tooltiptext">Email Lucy!</span>
         </div>
 
         <div class="email-individual">
             <a class="send-email" href="mailto:104810423@student.swin.edu.au">
-                <img class="individual-portrait" src="../images/portrait.webp" alt="Eloise portrait">
+                <img class="individual-portrait" src="images/portrait.webp" alt="Eloise portrait">
             </a>
             <span class="tooltiptext">Email Eloise!</span>
         </div>
 
         <div class="email-individual">
             <a class="send-email" href="104934718@student.swin.edu.au">
-                <img class="individual-portrait" src="../images/portrait.webp" alt="Oshadi portrait">
+                <img class="individual-portrait" src="images/portrait.webp" alt="Oshadi portrait">
             </a>
             <span class="tooltiptext">Email Oshadi!</span>
         </div>
