--- a/assign1/topic4.html
+++ b/assign1/topic4.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="utf-8" />
-        <meta name="description" content="HTML Image Map" />
-        <meta name="keywords" content="HTML5, image" />
-        <meta name="author" content="Eloise Ridder-Strickland"  />
+        <meta charset="utf-8">
+        <meta name="description" content="HTML Image Map">
+        <meta name="keywords" content="HTML5, image">
+        <meta name="author" content="Eloise Ridder-Strickland" >
         <title>HTML Image Map</title>
     </head>
 <!--FOR HTML-->
