updated .html to .php

--- a/assign2/enhancements1.html
+++ b/assign2/enhancements1.html
@@ -21,6 +21,7 @@
 
 <body>
     <!-- HEADER -->
+    <!-- left HTML code here as assignment requirements state this page to be .html and not .php -->
     <header id="website-header">
         <div id="header-left">
             <a href="index.php"><img id="header-js-icon" src="images/header-icon.png" alt="javascript icon"></a>
