--- a/assign2/enhancements2.html
+++ b/assign2/enhancements2.html
@@ -43,6 +43,9 @@
 
                 <li class="nav-list-item"><a href="enhancements2.html" class="header-navigation-link">ENHANCEMENTS 2</a>
                 </li>
+
+                <li class="nav-list-item"><a href="manage.php" id="supervisor-item" class="header-navigation-link">SUPERVISOR</a>
+                </li>
             </ul>
         </nav>
     </header>
